kubernetes/kong-database.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kong
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: kong
  name: postgres-statefulset
  labels:
    app: postgres
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:9.6
          ports:
            - containerPort: 5432
              name: postgresdb
          volumeMounts:
            - name: pv-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: pv-data
          persistentVolumeClaim:
            claimName: kong-postgres-pv-claim
---
# Kong postgres service
apiVersion: v1
kind: Service
metadata:
  name: kong-postgres
  namespace: kong
  labels:
    app: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - protocol: TCP
      name: http
      port: 5432
---
